Better install docs.